--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "escodegen": "^1.8.1",
     "esprima": "^3.0.0",
     "estraverse": "^4.2.0",
-    "gulp-less": "^3.1.0",
+    "less": "^2.7.1",
     "lodash": "^4.16.2",
     "through2": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
