--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.16.2",
     "through2": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yy-fs": "^1.0.0"
   },
   "devDependencies": {
     "browserify": "^13.1.0",
